# payment-gateway

./: .gitignore  .pre-commit-config.yaml  config.py  main.py  pyproject.toml
payme/: api.py  models.py  subscribe.py  utils.py
uzum/: api.py  models.py  nasiya.py
