[tool.black]
line-length = 119
safe = "true"
quiet = "true"
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.devcontainer
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 119

[tool.poetry]
name = "Payment Gateway"
description = "Uzbekistan payment integrations"
version = "0.0.1"
authors = ["djanmamur <mmsaidov@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.110.0"
